--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body {
   color: #000000; /* white text */
   font-family: Arial, sans-serif;
   
-  background-image: url("images.jpg");
+  background-image: url("download.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 button {
