--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   color: #000000; /* white text */
   font-family: Arial, sans-serif;
   
-  background-image: url("download.jpg");
+  background-image: url("732216.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -42,6 +42,7 @@ th {
 
 tr:hover {
   background-color: #f5f5f5;
+  opacity: 0.3;
 }
 header {
   background-color: #0077be; /* ocean blue color code */
