--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   color: #000000; /* white text */
   font-family: Arial, sans-serif;
   
-  background-image: url("732216.jpg");
+  background-image: url("wp2790317-professional-wallpaper.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
