--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button {
   border-radius: 5px;
   border: none;
   cursor: pointer;
+   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
